--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = [ "body-plz","buffer", "header-plz", "mime", "oneone-plz"]
+members = ["body-plz", "buffer-plz", "header-plz", "mime-plz", "oneone-plz"]
 
 [workspace.dependencies]
 bytes = "*"
@@ -8,4 +8,4 @@ criterion = "*"
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = "1.0.140"
 thiserror = { version = "2.0.12" }
-tracing = { version = "0.1.41"}
+tracing = { version = "0.1.41" }
