--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,12 @@
 [workspace]
 resolver = "3"
-members = ["body-plz", "buffer-plz", "header-plz", "mime-plz", "protocol-plz"]
+members = [
+  "body-plz",
+  "buffer-plz",
+  "header-plz",
+  "mime-plz",
+  "protocol-traits-plz",
+]
 
 [workspace.dependencies]
 bytes = "1.10"
