--- a/protocol-traits-plz/Cargo.toml
+++ b/protocol-traits-plz/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "protocol_plz"
+name = "protocol_traits_plz"
 version = "0.0.1"
 authors = ["darkseid", "sytten <emile@caido.io>"]
-description = "Protocol for the ParsePlz ecosystem"
+description = "Protocol traits for the ParsePlz ecosystem"
 repository = "https://github.com/parseplz/primitives"
 license = "MIT"
 edition = "2024"
