--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,6 +25,13 @@ jobs:
           toolchain: stable
           components: clippy, rustfmt
 
+      - name: Caching
+        uses: Swatinem/rust-cache@v2
+        with:
+          cache-all-crates: true
+          save-if: ${{ github.ref == 'refs/heads/master' }}
+          cache-provider: "github"
+
       - name: Run linter
         uses: giraffate/clippy-action@871cc4173f2594435c7ea6b0bce499cf6c2164a1
         with:
@@ -46,8 +53,12 @@ jobs:
 
       - name: Setup Rust
         uses: actions-rust-lang/setup-rust-toolchain@9399c7bb15d4c7d47b27263d024f0a4978346ba4
+      - name: Caching
+        uses: Swatinem/rust-cache@v2
         with:
-          cache: false
+          cache-all-crates: true
+          save-if: ${{ github.ref == 'refs/heads/master' }}
+          cache-provider: "github"
 
       - name: Run tests
         run: cargo test --all-features
