--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,6 +10,10 @@ concurrency:
   group: test-${{ github.ref_name }}
   cancel-in-progress: true
 
+env:
+  CARGO_INCREMENTAL: 0
+  CARGO_PROFILE_TEST_DEBUG: 0
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -60,5 +64,11 @@ jobs:
           save-if: ${{ github.ref == 'refs/heads/master' }}
           cache-provider: "github"
 
-      - name: Run tests
-        run: cargo test --all-features
+      - name: Install latest nextest release
+        uses: taiki-e/install-action@nextest
+
+      - name: Test with latest nextest release
+        uses: actions-rs/cargo@v1
+        with:
+          command: nextest
+          args: run
