--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,11 +30,11 @@ jobs:
           components: clippy, rustfmt
 
       - name: Caching
-        uses: Swatinem/rust-cache@v2
+        uses: Swatinem/rust-cache@9d47c6ad4b02e050fd481d890b2ea34778fd09d6
         with:
           cache-all-crates: true
           save-if: ${{ github.ref == 'refs/heads/master' }}
-          cache-provider: "github"
+          cache-provider: 'github'
 
       - name: Run linter
         uses: giraffate/clippy-action@871cc4173f2594435c7ea6b0bce499cf6c2164a1
@@ -57,18 +57,18 @@ jobs:
 
       - name: Setup Rust
         uses: actions-rust-lang/setup-rust-toolchain@9399c7bb15d4c7d47b27263d024f0a4978346ba4
+
       - name: Caching
-        uses: Swatinem/rust-cache@v2
+        uses: Swatinem/rust-cache@9d47c6ad4b02e050fd481d890b2ea34778fd09d6
         with:
           cache-all-crates: true
           save-if: ${{ github.ref == 'refs/heads/master' }}
-          cache-provider: "github"
+          cache-provider: 'github'
 
-      - name: Install latest nextest release
-        uses: taiki-e/install-action@nextest
-
-      - name: Test with latest nextest release
-        uses: actions-rs/cargo@v1
+      - name: Install nextest
+        uses: taiki-e/install-action@9903ab6feadaec33945de535fe9d181b91802a55
         with:
-          command: nextest
-          args: run
+          tool: nextest
+
+      - name: Run tests
+        run: cargo nextest run --all-features
