--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -5,6 +5,9 @@ on:
       - '*-v[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
+  tests:
+    uses: ./.github/workflows/check.yml
+
   publish:
     runs-on: ubuntu-latest
     timeout-minutes: 5
