build: add workflow_call and workflow_dispatch to check.yml

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -5,6 +5,8 @@ on:
   push:
     branches:
       - 'main'
+  workflow_call:
+  workflow_dispatch:
 
 concurrency:
   group: test-${{ github.ref_name }}
