fix: migrate dependencies from local workspace to crates.io

--- a/body-plz/Cargo.toml
+++ b/body-plz/Cargo.toml
@@ -8,8 +8,8 @@ license = "MIT"
 edition = "2024"
 
 [dependencies]
-buffer-plz = { path = "../buffer-plz", version = "0.0.2" }
+buffer-plz = "0.0.2"
 bytes = { workspace = true }
-header-plz = { path = "../header-plz", version = "0.0.4" }
+header-plz =  "0.0.4"
 thiserror = { workspace = true }
 tracing = { workspace = true }
