--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -83,7 +83,9 @@ jobs:
           cache-provider: "github"
 
       - name: Install latest nextest release
-        uses: taiki-e/install-action@nextest
+        uses: taiki-e/install-action@v2
+        with:
+          tool: nextest@0.9.98
 
       - name: Test with latest nextest release
         uses: actions-rs/cargo@v1
