--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 resolver = "3"
 members = [
   "body-plz",
-  "buffer-plz",
+  "buffer-plz", 
+  "decompression-plz",
   "header-plz",
   "mime-plz",
   "protocol-traits-plz",
