--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,10 @@ members = [
 
 [workspace.dependencies]
 bytes = "1.10"
-criterion = "0.5"
 serde = { version = "1", features = ["derive", "rc"] }
 serde_json = "1"
 thiserror = { version = "2" }
 tracing = { version = "0.1" }
+
+[workspace.dev.dependencies]
+tracing-subscriber = { version = "0.3" }
