feat(decompression-plz): added tracing-subscriber as dev dependency to decompression-plz

--- a/decompression-plz/Cargo.toml
+++ b/decompression-plz/Cargo.toml
@@ -17,3 +17,6 @@ zstd = "0.13.3"
 thiserror = { workspace = true }
 bytes = { workspace = true }
 tracing = { workspace = true }
+
+[dev.dependencies]
+tracing-subscriber = { workspace = true }
