--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,6 @@ serde_json = "1"
 thiserror = { version = "2" }
 tracing = { version = "0.1" }
 
-[workspace.dev.dependencies]
+# dev
+criterion = { version = "0.6" }
 tracing-subscriber = { version = "0.3" }
