--- a/decompression-plz/Cargo.toml
+++ b/decompression-plz/Cargo.toml
@@ -21,3 +21,6 @@ zstd = "0.13.3"
 bytes = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
+
+[dev-dependencies]
+oneone-plz = "0.0.3"
