test(decompression-plz): moved utils to new shared crate tests-utils

--- a/decompression-plz/Cargo.toml
+++ b/decompression-plz/Cargo.toml
@@ -21,3 +21,7 @@ zstd = "0.13.3"
 bytes = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
+
+
+[dev-dependencies]
+tests-utils = { path = "tests-utils" }
