--- a/decompression-plz/Cargo.toml
+++ b/decompression-plz/Cargo.toml
@@ -22,6 +22,6 @@ bytes = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 
-
 [dev-dependencies]
 tests-utils = { path = "tests-utils" }
+rstest = "0.26.1"
