feat(body-plz): bump header-plz to v0.0.29

--- a/body-plz/Cargo.toml
+++ b/body-plz/Cargo.toml
@@ -10,6 +10,6 @@ edition = "2024"
 [dependencies]
 buffer-plz = "0.0.3"
 bytes = { workspace = true }
-header-plz =  "0.0.28"
-thiserror = { workspace = true }
+header-plz =  "0.0.29"
+9hiserror = { workspace = true }
 tracing = { workspace = true }
