ci: run checks before publish

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,10 +5,11 @@ on:
       - '*-v[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
-  tests:
+  checks:
     uses: ./.github/workflows/check.yml
 
   publish:
+    needs: checks
     runs-on: ubuntu-latest
     timeout-minutes: 5
 
