--- a/header-plz/Cargo.toml
+++ b/header-plz/Cargo.toml
@@ -9,7 +9,11 @@ edition = "2024"
 
 [dependencies]
 buffer-plz = "0.0.3"
-mime-plz = "0.0.2"
 bytes = { workspace = true }
+mime-plz = "0.0.2"
+percent-encoding = "2.3.2"
 thiserror = { workspace = true }
 tracing = { workspace = true }
+
+[dev-dependencies]
+rstest = "0.26.1"
